2003-11-12  Christophe Fergeau  <teuf@gnome.org>

	* modules/http-method.c: ignore non significant white spaces in webdav
	messages. Fixes #118773. It may break some webdav servers, please file
	bugs or email me if you encounter some webdav breakage.

2003-11-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume.c (gnome_vfs_volume_handles_trash):
	Don't handle trash on read-only volumes.

2003-11-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c (create_vol_from_mount):
	Make sure volumes for user_visible drives are user_visible.

=== gnome-vfs 2.5.1 ===

2003-11-10  Alexander Larsson  <alexl@redhat.com>

	* test/test-volumes.c:
	Fix up build
	
2003-11-10  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	2.5.1

2003-11-06  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-drive.[ch]:
	Add new function gnome_vfs_drive_is_mounted
	
	* libgnomevfs/gnome-vfs-volume-ops.c:
	* libgnomevfs/gnome-vfs-volume.h:
	Fix up server unmount
	slight api change for volume ops
	new function gnome_vfs_connect_to_server
	
	* modules/computer-method.c: (fill_root):
	No home in computer

2003-11-05  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Check for more headers/funcs
	
	* daemon/gnome-vfs-daemon.c:
	Renames to fix collision with system headers
	Implement proxying of volume monitoring
	
	* libgnomevfs/GNOME_VFS_Daemon.idl:
	Added interfaces to proxy volumes
	
	* libgnomevfs/Makefile.am:
	Add new files
	
	* libgnomevfs/gnome-vfs-iso9660.h:
	* libgnomevfs/gnome-vfs-cdrom.[ch]:
	CDROM utilities
	
	* libgnomevfs/gnome-vfs-client.c:
	Volume proxy code
	
	* libgnomevfs/gnome-vfs-filesystem-type.[ch]:
	Filesystem info
	
	* libgnomevfs/gnome-vfs-drive.[ch]:
	New GnomeVFSDrive API
	
	* libgnomevfs/gnome-vfs-init.c:
	Shut down volume monitor on shutdown
	
	* libgnomevfs/gnome-vfs-unix-mounts.[ch]:
	Code to read mtabs/fstabs.
	
	* libgnomevfs/gnome-vfs-volume-monitor-private.h: