@@ -623,7 +623,11 @@ do_get_file_info (GnomeVFSMethod *method,
 	// Check and see if we already have opened and stashed this drive
 	if (!use_base) {
 		if (global_context != NULL) {
+#ifdef __linux__
 			if (strcmp (drive->cdda_device_name, global_context->drive->cdda_device_name) == 0) {
+#elif defined(__FreeBSD__)
+			if (strcmp (drive->dev->device_path, global_context->drive->dev->device_path) == 0) {
+#endif
 				use_cache = TRUE;
 				cdda_close (drive);
 				gnome_vfs_file_info_copy (file_info, global_context->file_info);
@@ -709,7 +713,11 @@ do_open_directory (GnomeVFSMethod *method, GnomeVFSMethodHandle **method_handle,
 	if (!use_base) {
 		// Check for cache
 		if (global_context != NULL) {
+#ifdef __linux__
 				if (strcmp (drive->cdda_device_name, global_context->drive->cdda_device_name) != 0) {
+#elif defined(__FreeBSD__)
+				if (strcmp (drive->dev->device_path, global_context->drive->dev->device_path) != 0) {
+#endif
 					//	Clear old cache
 					cdda_context_free (global_context);
 					global_context = cdda_context_new (drive, uri);
